tests/baselines/reference/for-of50.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of50.ts(2,22): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/for-ofStatements/for-of50.ts (1 errors) ====
    var map = new Map([["", true]]);
    for (const [k, v] of map) {
                         ~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
        k;
        v;
    }